--- a/Example/SSIDCard/SSIDCard-Info.plist
+++ b/Example/SSIDCard/SSIDCard-Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>嘿嘿</string>
 	<key>NSCameraUsageDescription</key>
 	<string>我们需要访问您的摄像头</string>
 	<key>CFBundleDevelopmentRegion</key>
