--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.m linguist-language=Objective-C
 *.cpp linguist-language=Objective-C
 *.a linguist-language=Objective-C
+*.framework filter=lfs diff=lfs merge=lfs -text
